--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -3,7 +3,7 @@
     [nzTrigger]="null">
     <div class="sidebar-logo">
       <a href="http://localhost:4200/admin" target="_blank">
-        <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
+        <img src="https://ng.ant.designassets/img/logo.svg" alt="logo">
         <h1>Shopica Seller Center</h1>
       </a>
     </div>
@@ -110,7 +110,7 @@
             </ng-template>
 
             <span nz-dropdown [nzDropdownMenu]="menu">
-              <img src="/assets/images/avatar.jpg" width="34" height="34">
+              <img src="assets/images/avatar.jpg" width="34" height="34">
               {{sellerName}}
               <i nz-icon nzType="down"></i>
             </span>
