--- a/src/app/modules/auth/page/login/login.component.html
+++ b/src/app/modules/auth/page/login/login.component.html
@@ -2,7 +2,7 @@
   <div nz-col nzSm="16" nzMd="10" nzLg="8">
     <div class="card">
       <div class="card-header">
-        <img width="90" src="/assets/images/logo.svg">
+        <img width="90" src="assets/images/logo.svg">
         <p class="title">Log in</p>
       </div>
       <div class="card-body">
@@ -53,6 +53,6 @@
     </div>
   </div>
   <div nz-col nzSm="0" nzMd="14" nzLg="16">
-    <img src="/assets/images/signin.svg">
+    <img src="assets/images/signin.svg">
   </div>
 </div>
