--- a/src/app/modules/dashboard/page/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/page/dashboard/dashboard.component.html
@@ -14,14 +14,14 @@
   <div nz-row [nzGutter]="24">
     <div nz-col [nzSpan]="6">
       <app-card [iconName]="'dollar-circle'" [iconStyle]="{'color':'#e4e615e3'}" [category]="'Revenue'" [time]="time"
-        [number]="revenue|currency>
+        [number]="revenue|currency">
       </app-card>
     </div>
 
     <div nz-col [nzSpan]=" 6">
-        <app-card [iconName]="'file-protect'" [iconStyle]="{'color':'#677f80'}" [category]="'Orders'" [number]="order"
-          [time]="time">
-        </app-card>
+      <app-card [iconName]="'file-protect'" [iconStyle]="{'color':'#677f80'}" [category]="'Orders'" [number]="order"
+        [time]="time">
+      </app-card>
     </div>
 
     <div nz-col [nzSpan]="6">
