--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,7 @@
 @import "~ng-zorro-antd/badge/style/index.min.css";
 @import "~ng-zorro-antd/image/style/index.min.css";
 @import "~ng-zorro-antd/upload/style/index.min.css";
+@import "~ng-zorro-antd/tooltip/style/index.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 html,
